Changelog
=========

3.0b7 - Unreleased
------------------


3.0b6 - 2009-10-20
------------------

- Avoid preserving the mysterious `-C` in the language selector.
  [hannosch]

- Made sure that subclasses of fields listed in I18NAWARE_REFERENCE_FIELDS
  also get the special reference handling. Otherwise schemaextender fields
  won't get the behavior.
  [hannosch]

- Let the `generatedMutatorWrapper` work directly on schemaextender fields.
  [hannosch]

- Replaced `has_key` with `in` checks using the `__contains__` protocol.
  [hannosch]

- Factored out generated methods from the language independent ClassGenerator
  into module scope functions to allow outside access to them.
  [hannosch]

3.0b5 - 2009-10-14
------------------

- Optimized the getTranslations method by allowing the calling functions to
  pass in a hint about the canonical status of self. Often this is known by
  the caller and doesn't have to be determined inside the getTranslations call.
  Also optimized getNonCanonicalTranslations by extending the API of
  getTranslations with a include_canonical flag.
  [hannosch]

- Optimized the getCanonical method to avoid two identical reference catalog
  queries and just do the query once.
  [hannosch]

- Added tests for and fixed more edge cases for the reference handling.
  There's about seventeen different ways how this API can be called.
  [hannosch]

- Fixed a bug in the LanguageIndependentFields adapter. It did a whole lot of
  magic to be LinguaPlone aware, just to miss the whole point. Simple is
  sometimes better. This fixes the last reference handling test failure.
  [hannosch]

- Fixed the whole references handling. Prior it used the saved references for
  synchronization, with the effect of ignoring new refs. Now it uses actually
  the given new values and looks up them. It deals now with partly translated
  targets and non-translatable targets. Also I cleaned up this part of the
  code.
  [jensens]

3.0b4 - 2009-10-02
------------------
